--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         </div>
     </div>
 
-<script src="./euromillions.js"></script>
+<script src="./euromillions_refacto.js"></script>
 </body>
 </html>
